package com.company.model.car;

import com.company.model.vehicle.Vehicle;
import com.company.model.vehicle.VehicleBuilder;

public class CarBuilder extends VehicleBuilder {
    @Override
    public Car build() {
        return null;
    }
}
