package com.company.model.core;

public interface ITransportable extends IStorable {
}
