@startuml

title __DIT953's Class Diagram__\n

  package com.company.model.car {
    class Car {
    }
    class CarBuilder {
    }
  }
  

  package com.company.MVC {
    class CarController {
    }
  }
  

  package com.company.model.transporter {
    class TransportVehicle {
    }
    class TransportVehicleBuilder {
    }
    interface ITransporter {
    }
  }

  package com.company.MVC {
    class CarView {
    }
    class DrawPanel {
    }
  }
  

  package com.company.model.movable {
    interface IMovable {
    }
  }
  

  package com.company.model.core {
    interface IPositionable {
    }
    interface IStorable {
    }
    interface IStorage {
    }
    interface ITransportable {
    }
    class Position {
    }

  }
  

  package com.company.model.vehicle {
    abstract class Vehicle {
    }
  }
  

  package com.company.model.repair {
    class RepairShop {
    }
  }

  package com.company.model.core {
    class Storage {
    }
  }

  package com.company.MVC.state {
    class Dispatcher {
    }
    class State {
    }
    enum Action {
    }
    class Tuple {
    }
  }

  Car -up-|> Vehicle
  CarController o-- CarView : frame
  CarView -up-|> JFrame
  CarView o-- DrawPanel : drawPanel
  DrawPanel -up-|> JPanel
  Position .up.|> IPositionable
  Storage .up.|> IStorage
  Storage o-- Position : position
  Vehicle .up.|> IMovable
  Vehicle .up.|> IStorable
  Vehicle .up.|> ITransportable
  Vehicle o-- Position : position
  Tuple --o State
  Action --* Dispatcher
  Dispatcher --* State
  State --o CarController
  CarController --o Action
  TransportVehicle -up-|> Vehicle
  TransportVehicle .up.|> ITransporter
  CarBuilder --o Car
  TransportVehicleBuilder --o TransportVehicle
  State --o Vehicle
  RepairShop --o Storage




right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
